apps/vaultwarden/config/vaultwarden-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vaultwarden
  name: vaultwarden
  namespace: vault
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: vaultwarden
