apps/vaultwarden/config/vaultwarden-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
  name: vaultwarden
  namespace: vault
spec:
  rules:
  - host: vault.dev.myogg.net
    http:
      paths:
      - backend:
          service:
            name: vaultwarden
            port:
              name: http
        path: /
        pathType: Prefix
